# spotify-ai-agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  agent.py  config.py  graph.py  main.py  mcp_client.py  prompts.py  rag.py  validation.py
data/: artists.md  genres.md  music_profile.md  playlist_rules.md
docs/: comment-marche-un-agent-ia.md
mcp_spotify_server/: __init__.py  server.py
scripts/: whoami.py
tests/: test_config.py  test_mcp_server.py  test_validation.py
